[gd_scene load_steps=7 format=3 uid="uid://qgkmiaahid50"]

[ext_resource type="Script" uid="uid://b8d7qn30jk7w3" path="res://music_player/music_player.gd" id="1_644n3"]
[ext_resource type="Texture2D" uid="uid://c646ac4mpqdx3" path="res://assets/icons/music_player/play.png" id="2_2vm4m"]
[ext_resource type="Texture2D" uid="uid://5w2mmkd3k01u" path="res://assets/icons/music_player/random_on.png" id="2_fcjbm"]
[ext_resource type="Texture2D" uid="uid://bxysilao465c7" path="res://assets/icons/music_player/pause.png" id="3_scy8j"]
[ext_resource type="Texture2D" uid="uid://paip5jncbilm" path="res://assets/icons/music_player/random_off.png" id="3_v34r3"]
[ext_resource type="Texture2D" uid="uid://b6wfpqbrnnkas" path="res://icon.svg" id="4_scy8j"]

[node name="MusicPlayer" type="Node"]
script = ExtResource("1_644n3")
metadata/_edit_horizontal_guides_ = [130.0]
metadata/_edit_vertical_guides_ = [320.0]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SongLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nome"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
alignment = 1

[node name="RandomButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("3_v34r3")
texture_pressed = ExtResource("2_fcjbm")
ignore_texture_size = true
stretch_mode = 5

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_2vm4m")
texture_pressed = ExtResource("3_scy8j")
ignore_texture_size = true
stretch_mode = 5

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4

[node name="LoopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true

[node name="NextButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 5)
layout_mode = 2
texture_disabled = ExtResource("4_scy8j")
ignore_texture_size = true
stretch_mode = 0

[connection signal="toggled" from="VBoxContainer/HBoxContainer/RandomButton" to="." method="_on_random_button_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/LoopButton" to="." method="_on_loop_button_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton2" to="." method="_on_next_button_pressed"]
